# reverse-forensic-tools

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
.venv-312/: pyvenv.cfg
.venv-312/Scripts/: activate  activate.bat
config/: config.yaml
docs/adr/: 0001-plugin-architecture.md  0002-report-schema.md  0003-security-guardrails.md
docs/architecture/: data-flow.md  overview.md  plugin-system.md  security-model.md
docs/design/: cli-design.md  evidence-model.md  reporting-format.md
docs/development/: coding-standard.md  contribution-guide.md  release-process.md  testing-strategy.md
docs/roadmap/: roadmap-v1.md
src/: __init__.py
src/core/: __init__.py  cli.py  config_manager.py  logger.py
src/forensic/: __init__.py
src/forensic/disk_forensic/: __init__.py
src/forensic/log_analysis/: __init__.py
src/forensic/memory_forensic/: __init__.py
src/forensic/network_forensic/: __init__.py
src/reverse_engineering/: __init__.py
src/reverse_engineering/binary_analysis/: __init__.py  base_parser.py  binary_detector.py  binary_info.py  cli_pe.py  elf_parser.py  import_parser.py  macho_parser.py  pe_parser.py  section_parser.py
src/reverse_engineering/decompiler/: __init__.py
src/reverse_engineering/disassembler/: __init__.py
src/reverse_engineering/malware_analysis/: __init__.py
src/tests/unit/: test_hex_dump_viewer.py
src/utils/: __init__.py  file_identifier.py  hash_calculator.py  hex_dump_viewer.py
