[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reverse-forensic-tools"
version = "1.0.0"
description = "A comprehensive Python toolkit for Reverse Engineering and Digital Forensic analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Operator Cedra"}]
keywords = [
    "reverse-engineering", "digital-forensics", "malware-analysis",
    "binary-analysis", "disassembly", "decompilation", "forensics", "security"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
rft = "core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yar", "*.md", "*.html"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "W", "I"]
ignore = ["E501"]

